--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    margin-top: 0px;
     /* background-color: black; */
     color: white;
 }
@@ -80,7 +81,7 @@ h3{
     color: rgb(255, 0, 0);
     position: absolute;
     top: 1350px;
-    left:580px;
+    left:380px;
    
 }
 .logo2{
@@ -91,7 +92,7 @@ h3{
     color: rgb(222, 0, 0);
      position: absolute;
     top: 1350px;
-    left: 930px;
+    left: 730px;
 }
 .logo3{
      border: 5px solid rgb(0, 0, 0);
@@ -101,7 +102,7 @@ h3{
     color: rgb(250, 0, 0);
      position: absolute;
     top: 1350px;
-    left: 1280px;
+    left: 1080px;
 }
 .logo4{
      border: 5px solid rgb(0, 0, 0);
@@ -111,7 +112,7 @@ h3{
     color: rgb(255, 0, 0);
     position: absolute;
     top: 1350px;
-    left: 1630px;
+    left: 1430px;
 }
 .btn{
     background-color: black;
@@ -125,7 +126,7 @@ h3{
     padding: 22px;
     position: absolute;
     top: 1550px;
-   left: 650px;
+   left: 450px;
 
 }
 .btn4{
@@ -136,7 +137,7 @@ h3{
     padding: 22px;
     position: absolute;
     top: 1550px;
-   left: 1380px;
+   left: 1180px;
 
 }
 .btn5{
@@ -147,7 +148,7 @@ h3{
     padding: 22px;
     position: absolute;
     top: 1550px;
-   left: 1020px;
+   left: 820px;
 
 }
 .btn6{
@@ -158,7 +159,7 @@ h3{
     padding: 22px;
     position: absolute;
     top: 1550px;
-   left: 1750px;
+   left: 1530px;
 
 }
 /* second div end */
@@ -175,7 +176,7 @@ background-color: black;
     text-align: center;
     position: absolute;
     top: 1470;
-   left: 680px;
+   left: 480px;
 }
 .div9{
     color: white(0, 0, 0);
@@ -209,7 +210,7 @@ width: 35%;
 height: 25%;
 }
 .img2{
-    width: 55rem;
+    width: 50rem;
     position: absolute;
     top: 1880px;
     right: 350px;
@@ -220,7 +221,7 @@ width: 35%;
 height: 25%;
 }
 .img3{
-    width: 55rem;
+    width: 50rem;
     position: absolute;
     top: 2390px;
     left:250px;
@@ -232,7 +233,7 @@ height: 25%;
     position: absolute;
     top: 2300px;
     padding: 200px;
-    right: 250px;
+    right: 150px;
    
 }
 .red1{
@@ -282,11 +283,10 @@ width: 35%;
 height: 25%;
 }
 .img4{
-    width: 55rem;
+    width: 50rem;
     position: absolute;
     top: 2890px;
-    left:250px;
-    left: 1150px;
+    right: 350px;
 }
 /* third div end */
 /* fourth div start */
@@ -301,7 +301,7 @@ background-color: black;
     text-align: center;
     position: absolute;
     top: 1470;
-   left: 680px;
+   left: 580px;
 }
 .container {
   display: flex;
