--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     margin-top: 0px;
     /* background-color: black; */
     color: white;
+  outline: 1px solid red;
+   overflow-x: hidden;
 }
 /* navbar start */
 .navbar{
@@ -34,6 +36,9 @@
 }
 img{
     width: 220px;
+     max-width: 100%;
+  height: auto;
+  display: block;
 }
 /* navbar end */
 /* first div start */
@@ -41,6 +46,9 @@ img{
    background-image: url(8f5e8fa1-19e4-4561-89e4-5647759c78e1.webp);
 background-size: cover;
 height: 1000px;
+  background-position: center;
+  width: 100%;
+  max-width: 2380px;
 
 }
 /* first div end */
@@ -56,9 +64,10 @@ padding: 50px;
 }
 .content{
      width: 1000px;
+      max-width: 1536px;
     text-align: center;
     position: absolute;
-    left: 680px;
+    left: 480px;
 }
 h3{
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -77,6 +86,7 @@ h3{
      border: 5px solid rgb(0, 0, 0);
     background-color:white;
     width: 280px;
+     max-width: 1536px;
     padding: 25px;
     color: rgb(255, 0, 0);
     position: absolute;
@@ -88,6 +98,7 @@ h3{
      border: 5px solid rgb(0, 0, 0);
     background-color:white;
     width: 280px;
+     max-width: 1536px;
      padding: 25px;
     color: rgb(222, 0, 0);
      position: absolute;
@@ -98,6 +109,7 @@ h3{
      border: 5px solid rgb(0, 0, 0);
     background-color:white;
     width: 280px;
+     max-width: 1536px;
      padding: 25px;
     color: rgb(250, 0, 0);
      position: absolute;
@@ -108,6 +120,7 @@ h3{
      border: 5px solid rgb(0, 0, 0);
     background-color:white;
     width: 280px;
+     max-width: 1536px;
      padding: 15px;
     color: rgb(255, 0, 0);
     position: absolute;
@@ -127,6 +140,7 @@ h3{
     position: absolute;
     top: 1550px;
    left: 450px;
+    max-width: 1536px;
 
 }
 .btn4{
@@ -138,6 +152,7 @@ h3{
     position: absolute;
     top: 1550px;
    left: 1180px;
+    max-width: 1536px;
 
 }
 .btn5{
@@ -149,6 +164,7 @@ h3{
     position: absolute;
     top: 1550px;
    left: 820px;
+    max-width: 1536px;
 
 }
 .btn6{
@@ -160,6 +176,7 @@ h3{
     position: absolute;
     top: 1550px;
    left: 1530px;
+    max-width: 1536px;
 
 }
 /* second div end */
@@ -173,6 +190,7 @@ background-color: black;
 }
 .img1-content{
     width: 1000px;
+     max-width: 1536px;
     text-align: center;
     position: absolute;
     top: 1470;
@@ -181,6 +199,7 @@ background-color: black;
 .div9{
     color: white(0, 0, 0);
     width: 50%;
+     max-width: 1536px;
     text-align: center;
     position: absolute;
     top: 1980px;
@@ -207,6 +226,7 @@ background-color: black;
 .islamabad-img{
 
 width: 35%;
+ max-width: 1536px;
 height: 25%;
 }
 .img2{
@@ -218,17 +238,19 @@ height: 25%;
 .faislabad-img{
 
 width: 35%;
+ max-width: 1536px;
 height: 25%;
 }
 .img3{
     width: 50rem;
     position: absolute;
     top: 2390px;
-    left:250px;
+    left:150px;
 }
 .div10{
     color: white(0, 0, 0);
     width: 50%;
+     max-width: 1536px;
     text-align: center;
     position: absolute;
     top: 2300px;
@@ -255,6 +277,7 @@ height: 25%;
 .div11{
     color: white(0, 0, 0);
     width: 50%;
+     max-width: 1536px;
     text-align: center;
     position: absolute;
     top: 2880px;
@@ -280,6 +303,7 @@ height: 25%;
 .bahawalpur-img{
 
 width: 35%;
+ max-width: 1536px;
 height: 25%;
 }
 .img4{
