--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ img{
 background-size: cover;
 height: 1000px;
   background-position: center;
-  width: 100%;
+  width: 2500px;
   max-width: 2380px;
 
 }
